@@ -91,8 +91,8 @@ Panel Global Config Schema File -  work in progress
       </schema>
 
       <schema>
-        <key>/schemas/apps/panel/panel-hide-speed</key>
-        <applyto>/apps/panel/panel-hide-speed</applyto>
+        <key>/schemas/apps/panel/panel-animation-speed</key>
+        <applyto>/apps/panel/panel-animation-speed</applyto>
         <owner>panel</owner>
         <type>int</type>
         <default>80</default>
