@@ -1,3 +1,14 @@
+2001-11-29  Glynn Foster  <glynn.foster@sun.com>
+
+	* basep-widget.c, button-widget.c,  menu.c,  
+	panel-widget.c,  panel_config_global.h,
+	panelglobalconfig.schemas, session.c: 
+
+	Changed some of the configuration around to be more 
+	sensible. Removed titles on menus code forever. Fix
+	bug where launchers/applets would move off the left 
+	hand side of the screen.
+
 2001-11-29  Glynn Foster <glynn.foster@sun.com>
 	
 	* panel-gconf.[ch]: Add some more convience methods.
